# scout94

./: .env.example  .gitignore  .scout94.state  ADMIN_SETTINGS_PANEL_TODO.md  AUDITOR_COMPLETE.md  AUDITOR_GUIDE.md  CLINIC_ANALYSIS.md  CLINIC_COMPLETE.md  CLINIC_GUIDE.md  CLI_GUIDE.md  COLLABORATIVE_REPORT_TODO.md  COMMUNICATION_FLOW.md  CONTAINERIZED_TESTING_GUIDE.md  FIXES_APPLIED_OCT16.md  FIXES_APPLIED_OCT16_PHASE2.md  FIXES_SUMMARY.md  FRAMEWORK_INTEGRATION_COMPLETE.md  GITHUB_SETUP.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_IMPLEMENTATION_PLAN.md  LARRY_MODE_SESSION_COMPLETE.md  LAUNCH_GUIDE.md  LAUNCH_SCOUT94.sh  MATHEMATICAL_FRAMEWORK.md  MOCK_DETECTION_PROTOCOL.md  MULTI_LLM_INTEGRATION_STATUS.md  MULTI_LLM_PLAN.md  NATIVE_APP_PLAN.md  PARALLEL_PROGRESS.md  PHASE1_IMPROVEMENTS_IMPLEMENTED.md  PHASE1_VALIDATION_RESULTS.md  PHASE2_COMPLETE.md  PHASE2_INITIAL_IMPLEMENTATION.md  PROGRESSIVE_REPORT_FLOW.md  README.md  READY_FOR_IMPLEMENTATION.md  RETRY_FLOWS_COMPLETE.md  RETRY_LOGIC.md  (+50 more)
.github/: FUNDING.yml
examples/: example-schema.sql
php-helpers/: report-helper.php  report-secretary.php
test-reports/: settings-panel-analysis.json
ui/: INSTALL_RUST.sh  QUICK_START.sh  README.md  SETTINGS_PROGRESS.md  SETUP_NATIVE_APP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: commands.rs  main.rs  remote_scanner.rs
websocket-server/: server.js  (+30 more)
(+45 files in other folders)
